# exodusdb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  README  aclocal.m4  addrepo_fed15.sh  addrepo_lucid.sh  addrepo_rh5.sh  addrepoapt.sh  apache2.txt  batchEXAMPLE.cmd  batchEXAMPLE.sh  batchone.cmd  bitrock_all.xml  bitrock_all_osx.sh  build.bat  build_all.bat  buildboost.sh  buildexodus.sh  buildicu.cmd  buildicu.sh  buildinstall_yum.sh  buildinstall_zyp.sh  c.nanorc  clean.bat  clean.cmd  clean.sh  cloud-config.yaml  cmake_uninstall.cmake.in  config.bat  config.cmd  config.sh  config0.bat  configlocalEXAMPLE.cmd  configlocalEXAMPLE.sh  configure  configure.ac  (+49 more)
cli/: CMakeLists.txt  Makefile.in  append3.cpp  compile.cpp  compile2.cpp  config.h.in  configure  configure.ac  copyfile.cpp  copyrec.cpp  createindex.cpp  dbattach.cpp  dbcomp.cpp  dbcopy.cpp  delete.cpp  deleteindex.cpp  dict2sql.cpp  dict_myclients.h  edic.cpp  edir.cpp  exodus-cli.spec  exodus.cpp  fire.cpp  fixdeprecated.cpp  gendoc.cpp  gendoc.sh  gendoc.var.h.html  htmllib2.cpp  htmllib2.h  list.cpp  listfiles.cpp  nlist.cpp  pygcpp.cpp  syncdat.cpp  testlib.cpp  testsort.cpp
cli/src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  clearfile.cpp  compile.cpp  compile.vcxproj  compile2005.vcproj  configexodus.cpp  configexodus.vcxproj  configexodus2005.vcproj  convr2a.cpp  convsyntax.cpp  convsyntax2.cpp  copyfile.cpp  copyrec.cpp  cpp2dat.cpp  createfile.cpp  createfile.vcxproj  createfile2005.vcproj  createindex.cpp  createindex.vcxproj  createindex2005.vcproj  dbattach.cpp  dbcomp.cpp  dbcopy.cpp  dbcreate.cpp  dbdelete.cpp  dbgrep.cpp  dblist.cpp  ddview.cpp  delete.cpp  delete.vcproj  delete.vcxproj  deletefile.cpp  deletefile2005.vcproj  deleteindex.cpp  deleteindex.vcproj  deleteindex.vcxproj  deleteindex2005.vcproj  (+60 more)
exodus/: ASCIIutil.h  CMakeLists.txt  COPYING  DBconn.cpp  DBconn.h  DBpool.cpp  DBpool.h  DBresult.cpp  DBresult.h  Doxyfile  Makefile.am  cargs.h  cassert-warn  common.h  configure  configure.ac  demo_term.cpp  dict.h  dim.1  dim.cpp  dim.h  dim.htm  exocallable.cpp  exocallable.h  exodebug.cpp  exodebug.h  exodus.h  exoenv.cpp  exoenv.h  exofuncs.cpp  exofuncs.h  exoimpl.h  exomacros.h  exoprog.1  exoprog.cpp  exoprog.cppm  exoprog.h  extract_v2.cpp  extract_v3.cpp  extract_v4.cpp  (+101 more)
exodus/exodus/: Doxyfile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac  libexodus.spec
exodus/libexodus/: Doxyfile  Makefile.am  Makefile.in  configure  configure.ac  configure.bsd  exodus.pc.in  libexodus.spec
exodus/libpgexodus/: Makefile.in  config.bat  configure  install.bat  libpgexodus.spec
exodus/oldstd/: allstd.cppm  generator.hpp  std-gmf.hpp  std.cppm
exodus/pgexodus/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  grablibs.sh
exostd/: CMakeLists.txt  test_clang.cpp
pygment/: .gitignore  README.md  exodus_cpp.py  install.sh  pyproject.toml  setup.py  test.cpp  test.sh  test_exp.htm
test/: CMakeLists.txt  calblur8.html  demo_debug.cpp  demo_precision.cpp  test_D.cpp  test_MD.cpp  test_MT.cpp  test_Regress.cpp  test_async.cpp  test_asyncupd.cpp  test_codepage.cpp  test_comp.cpp  test_constants.cpp  test_cut.cpp  test_db.cpp  test_db2.cpp  test_dim.cpp  test_except.cpp  test_exoprog.cpp  test_fiber.cpp  test_format.cpp  test_funcs.cpp  test_index.cpp  test_input.cpp  test_int.cpp  test_listed.cpp  test_main2.cpp  test_main3.cpp  test_math.cpp  test_modules.cpp  test_more.cpp  test_more2.cpp  test_more2b.cpp  test_more2c.cpp  test_multilang.cpp  test_mvfuncs.cpp  test_mvmv.cpp  test_mvmv2.cpp  test_new.cpp  test_new_db.cpp  (+20 more)
test/data/: COMP.TXT  FIELD.TXT  SPLICER.TXT  SUBSTR.TXT
test/src/: .gitignore  CMakeLists.txt  align.cpp  demo_precision.cpp  exprtk.cpp  genregress2.cpp  test_D.cpp  test_MB.cpp  test_MD.cpp  test_MT.cpp  test_Regress.cpp  test_asyncupd.cpp  test_codepage.cpp  test_commandline.cpp  test_comp.cpp  test_constants.cpp  test_cut.cpp  test_db.cpp  test_db2.cpp  test_dict.cpp  test_dim.cpp  test_except.cpp  test_exoprog.cpp  test_format.cpp  test_funcs.cpp  test_greg.cpp  test_index.cpp  test_input.cpp  test_int.cpp  test_isnum.cpp  test_main.cpp  test_main.out  test_main1.cpp  test_main1.out  test_main2.cpp  test_main2.out  test_main3.cpp  test_math.cpp  test_modules.cpp  test_more.cpp  (+48 more)
trunk/: CMakeLists.txt  Makefile.in  README  addrepo_fed15.sh  addrepo_lucid.sh  addrepo_rh5.sh  batchEXAMPLE.sh  batchone.sh  bitrock_all.xml  bitrock_all_osx.sh  bitrock_dynamic.xml  boost.vsprops  buildboost.sh  buildicu.sh  buildinstall_yum.sh  buildinstall_zyp.sh  clean.bat  clean.sh  config.bat  config.cmd  config.sh  config0.bat  configlocalEXAMPLE.sh  configure  configure.ac  configure.bsd  cycle.cmd  dev.bat  dev.cmd  devgui.cmd  devprompt.cmd  exodus_all.nsi  exodus_all.sln  exodus_all2005.sln  exodus_all2008.sln  exodus_console.sln  googlecode_upload.py  install.sh  install_apt.sh  installboost.sh  (+20 more)
trunk/cli/: config.h.in  configure  configure.ac  exodus-cli.spec
trunk/debian/: changelog  postinst
trunk/dict_TESTLIB/: dict_TESTLIB.cpp
trunk/dict_TESTLIB_test/: dict_TESTLIB_test.vcproj  main.cpp
trunk/docker.io/: docker notes  install and run service with no docker
trunk/exodus/: Makefile.in  configure  configure.ac
trunk/service/: exodus-apache2.conf
trunk/swig/: Makefile  backtrace.php  build.sh  config.sh  exo.php.patch  exodus.i  install.sh  install_apt.sh  make.sh  setupallcentos.sh  setupbuildinstallall.sh  setupubuntuall.sh  (+12 more)
var/: CMakeLists.txt  DBconn.h  DBresult.cpp  cargs.h  dim.cpp  dim.h  exodebug.cpp  exodebug.h  extract_v3.cpp  fixdirtime.cpp  fixdirtime.h  format.h  murmurhash3.cpp  range.h  readline.cpp  reset_range.cpp  rex.cpp  rex.h  stream_ptr.h  task_mutex.cpp  task_mutex.h  task_scheduler.cpp  task_scheduler.h  term_echo.cpp  term_getkey.cpp  term_haskey.cpp  timebank.cpp  timebank.h  timebank.txt  var.cpp  var.cppm  var.h  var_base.cpp  var_base.h  var_base_friends.h  var_base_friends_impl.h  var_iter.cpp  var_iter.h  varb.cpp  varb.h  (+42 more)
(+3099 files in other folders)
